--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,8 @@ button {
   margin: 15px;
   padding: 10px 20px;
   font-size: 20px;
-  background-color: #ff7675;
+  background-color: #a8ff75;
+  border-radius: 15px;
 }
 
 .NavBar { 
@@ -65,8 +66,8 @@ button {
 }
 
 input.form-control {
-  size: 50px;
-  color: rgb(46, 46, 83);
+  size: 100px;
+  color: rgb(255, 255, 255);
 }
 
 html {
@@ -76,16 +77,28 @@ html {
 }
 
 form input{
-  color: forestgreen;
   display: grid;
-  grid-template-columns: 50%;
-  grid-template-rows: 200%;
-  grid-template-columns: 50%;
+  grid-template-columns: 70%;
+  grid-template-rows: 300%;
+  grid-template-columns: 70%;
   justify-content: center;
   padding-bottom: 5px;
   padding-top: 5px;
   margin: auto;
   margin-top: 10px;
-  background-color: rgba(240, 98, 98, 0.5);
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  background-color: rgba(58, 37, 37, 0.5);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border: round;
+  border-color: silver;
+  border-style: ridge;
+}
+
+#signupbtn {
+  margin: 15px;
+  padding: 10px 20px;
+  font-size: 20px;
+  background-color: #a8ff75;
+  border-radius: 15px;
+  margin: auto;
+  margin-top: 30px;
 }
