--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
-  background-image: url(https://i.imgur.com/squlTsm.jpg);
-  background-repeat: no-repeat;
+  background-color: white;    
+
   background-size: cover;
+  /* background-size: contain; */
   color: White;
   text-align: center;
+
 }
 
 .App-logo {
@@ -11,13 +13,13 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -26,9 +28,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
 }
 
@@ -39,16 +41,16 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
-body {
+/* body {
   background-color: #dfe6e9;
-}
+} */
 
-.youtube {
+/* .youtube {
   border: 2px #0984e3 dashed;
   margin-top: 20px;
-}
+} */
 
 button {
   margin: 15px;
@@ -60,35 +62,34 @@ button {
 
 .NavBar { 
   font-size: 24px;
-  background-image: linear-gradient(260deg, #60b982 0%, #cf6e6e 100%);
+  background-image: linear-gradient(260deg, #60b982 0%, #cf8686 100%);
   border: 1px solid rgba(0, 0, 0, 0.5);
   padding-bottom: 10px;
 }
 
 input.form-control {
   size: 100px;
-  color: rgb(255, 255, 255);
+  color: black;
 }
 
 html {
-  background-image: url(https://i.imgur.com/squlTsm.jpg?1);
+  background-image: url(https://i.imgur.com/TcOUbTM.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 form input{
   display: grid;
-  grid-template-columns: 70%;
-  grid-template-rows: 300%;
-  grid-template-columns: 70%;
+  /* grid-template-columns: 70%; */
+  /* grid-template-rows: 300%; */
+  /* grid-template-columns: 70%; */
   justify-content: center;
   padding-bottom: 5px;
   padding-top: 5px;
   margin: auto;
-  margin-top: 10px;
-  background-color: rgba(58, 37, 37, 0.5);
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  border: round;
+  margin-top: 20px;
+  background-color: rgba(91, 212, 20, 0.5);
+  font-family: monospace;
   border-color: silver;
   border-style: ridge;
 }
@@ -102,3 +103,4 @@ form input{
   margin: auto;
   margin-top: 30px;
 }
+
