--- a/src/App.css
+++ b/src/App.css
@@ -1,70 +1,29 @@
 .App {
-  background-color: white;    
-
-  background-size: cover;
-  /* background-size: contain; */
-  color: White;
   text-align: center;
-
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
-/* .App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-/* body {
-  background-color: #dfe6e9;
-} */
-
-/* .youtube {
-  border: 2px #0984e3 dashed;
-  margin-top: 20px;
-} */
 
 button {
-  margin: 15px;
-  padding: 10px 20px;
-  font-size: 20px;
-  background-color: #a8ff75;
-  border-radius: 15px;
+  text-decoration: none;
+  margin: 10px;
+  padding:10px 20px;
+  border: solid;
+  border-radius: 25px;
+  color: rgba(223, 0, 0, 0.5);
+  background-color: rgba(216, 218, 214, 0.5);
 }
 
 .NavBar { 
-  font-size: 24px;
-  background-image: linear-gradient(260deg, #60b982 0%, #cf8686 100%);
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  padding-bottom: 10px;
+  font-size: 15px;
+  background-color: rgba(223, 236, 236, 0.5);
+  padding-bottom: 40px;
+  padding-top: 0px;
+  margin-top: 10px;
+  margin-left: 0px;
+  position: fixed;
+  width: 91%;
+
 }
 
 input.form-control {
@@ -73,34 +32,97 @@ input.form-control {
 }
 
 html {
-  background-image: url(https://i.imgur.com/TcOUbTM.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 form input{
   display: grid;
-  /* grid-template-columns: 70%; */
-  /* grid-template-rows: 300%; */
-  /* grid-template-columns: 70%; */
   justify-content: center;
   padding-bottom: 5px;
   padding-top: 5px;
   margin: auto;
   margin-top: 20px;
-  background-color: rgba(91, 212, 20, 0.5);
+  background-color: rgba(216, 218, 214, 0.5);
   font-family: monospace;
   border-color: silver;
-  border-style: ridge;
+  border-style: none;
+}
+
+.signupInput {
+  width: 350px;
+  height: 30px;
 }
 
 #signupbtn {
-  margin: 15px;
-  padding: 10px 20px;
+  font-family: sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  text-decoration: none;
+  padding:10px 20px;
+  border: solid;
+  border-radius: 25px;
+  color: rgba(223, 0, 0, 0.5);
+  background-color: white;
+}
+
+a.NavBar-link {
+  font-family: sans-serif;
+  float: left;
+  justify-content: left;
+  text-decoration: none;
+  margin: 10px;
+  padding:10px 20px;
+  border: solid;
+  border-radius: 25px;
+  color: rgba(223, 0, 0, 0.5);
+  background-color: rgba(216, 218, 214, 0.5);
+}
+
+#title {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: black;
+  text-align: left;
+  margin-left: 20px;
+  margin-top: 30px
+}
+
+#signUpTitle {
+  font-family: sans-serif;
+  font-size: 35px;
+}
+
+.form-horizontal {
+  padding: 300px;
+  border: 100px;
+}
+
+form {
+  padding: auto;
+  border:100px;
+}
+
+span.NavBar-welcome {
+  color: black;
+  display: flex;
+  padding-left: 5px;
+  margin-left:20px;
   font-size: 20px;
-  background-color: #a8ff75;
-  border-radius: 15px;
-  margin: auto;
-  margin-top: 30px;
+}
+
+button.btn.btn-default {
+  font-family: sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  text-decoration: none;
+  padding:10px 20px;
+  border: solid;
+  border-radius: 25px;
+  color: rgba(223, 0, 0, 0.5);
+  background-color: rgba(216, 218, 214, 0.5);
+}
+
+button:hover {
+  background-color: white;
 }
 
