--- a/src/App.css
+++ b/src/App.css
@@ -16,13 +16,13 @@ button {
 
 .NavBar { 
   font-size: 15px;
-  background-color: rgba(223, 236, 236, 0.5);
+  background-color: rgba(234, 243, 243, 0.8);
   padding-bottom: 40px;
-  padding-top: 0px;
+  padding-top: 10px;
   margin-top: 10px;
   margin-left: 0px;
-  position: fixed;
-  width: 91%;
+  /* position: fixed; */
+  width: 100%;
 
 }
 
@@ -77,14 +77,17 @@ a.NavBar-link {
   border-radius: 25px;
   color: rgba(223, 0, 0, 0.5);
   background-color: rgba(216, 218, 214, 0.5);
+  margin-left: 40px;
 }
 
 #title {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: black;
   text-align: left;
+  font-size: 45px;
   margin-left: 20px;
-  margin-top: 30px
+  margin-top: 30px;
+  padding-left: 30px;
 }
 
 #signUpTitle {
@@ -107,7 +110,7 @@ span.NavBar-welcome {
   display: flex;
   padding-left: 5px;
   margin-left:20px;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 button.btn.btn-default {
