--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,6 @@
   text-align: center;
 }
 
-
-
 button {
   text-decoration: none;
   margin: 10px;
@@ -14,27 +12,32 @@ button {
   background-color: rgba(216, 218, 214, 0.5);
 }
 
-.NavBar { 
-  font-size: 15px;
-  background-color: rgba(234, 243, 243, 0.8);
-  padding-bottom: 40px;
-  padding-top: 10px;
-  margin-top: 10px;
-  margin-left: 0px;
-  /* position: fixed; */
-  width: 100%;
 
+.NavBar { 
+  display: flex;
+  flex-direction: row;
+  justify-content:  space-between;
+  font-size: 12px;
+  background-color: rgb(255, 255, 255);
+  padding-bottom: 0px;
+  padding-top: 0px;
+  margin-top: 0px;
+  margin-left: 0px;
+  width: 100%;
 }
+
 
 input.form-control {
   size: 100px;
   color: black;
 }
 
+
 html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 
 form input{
   display: grid;
@@ -43,16 +46,18 @@ form input{
   padding-top: 5px;
   margin: auto;
   margin-top: 20px;
-  background-color: rgba(216, 218, 214, 0.5);
+  background-color: rgb(216, 218, 214);
   font-family: monospace;
   border-color: silver;
   border-style: none;
 }
 
+
 .signupInput {
   width: 350px;
   height: 30px;
 }
+
 
 #signupbtn {
   font-family: sans-serif;
@@ -66,28 +71,26 @@ form input{
   background-color: white;
 }
 
+
 a.NavBar-link {
   font-family: sans-serif;
-  float: left;
-  justify-content: left;
+  float: right;
   text-decoration: none;
   margin: 10px;
-  padding:10px 20px;
-  border: solid;
+  padding:5px 20px;
+  border: none;
   border-radius: 25px;
-  color: rgba(223, 0, 0, 0.5);
-  background-color: rgba(216, 218, 214, 0.5);
-  margin-left: 40px;
+  color: rgb(255, 255, 255);
+  background-color: rgb(236, 14, 14);
+  margin-left: 15px;
 }
+
 
 #title {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: black;
   text-align: left;
-  font-size: 45px;
-  margin-left: 20px;
-  margin-top: 30px;
-  padding-left: 30px;
+  font-size: 25px;
 }
 
 #signUpTitle {
@@ -108,9 +111,10 @@ form {
 span.NavBar-welcome {
   color: black;
   display: flex;
+
   padding-left: 5px;
   margin-left:20px;
-  font-size: 25px;
+  font-size: 12px;
 }
 
 button.btn.btn-default {
@@ -129,3 +133,8 @@ button:hover {
   background-color: white;
 }
 
+.navbar-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
